working create function for posts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,7 @@
-<%= "#{@post.title}" %>
+<div class="post-title">
+  <%= "#{@post.title}" %>
+</div>
+
+<div class="post-body">
+  <%= "#{@post.body}" %>
+</div>
