strong params issue solved

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Write a New Post!</h1>
 
-<%= form_for(new_user_post_path) do |f| %>
+<%= form_for @post, url: user_posts_path do |f| %>
 
 <p>
   <%= f.label :title %><br>
