--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,3 +5,5 @@
 <div class="post-body">
   <%= "#{@post.body}" %>
 </div>
+
+<%= link_to "delete", user_post_path, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
