--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<div>
+  <% if current_user %>
+    hello <%= current_user.username %>
+    <% link_to "Log Out", '/logout' %>
+  <% else %>
+    <%= link_to "Log In", '/login' %> | <%= link_to "Sign Up", new_user_path %>
+  <% end %>
+</div>
+
 <%= yield %>
 
 </body>
