--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="post-title">
-  <%= "#{@post.title}" %>
+  <h2><%= "#{@post.title}" %></h2>
 </div>
 
 <div class="post-body">
@@ -7,3 +7,7 @@
 </div>
 
 <%= link_to "delete", user_post_path, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
+
+<%= link_to "edit", edit_user_post_path %>
+
+<%= link_to "new post", new_user_post_path %>
