--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,8 +10,8 @@
 <%= render partial: 'comments/form' %>
 <%= render partial: 'posts/comment', collection: @post.comments %>
 
-<%= link_to "delete", user_post_path, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
+<%= link_to "delete", user_city_post_path, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
 
-<%= link_to "edit", edit_user_post_path %>
+<%= link_to "edit", edit_user_city_post_path %>
 
-<%= link_to "new post", new_user_post_path %>
+<%= link_to "new post", new_user_city_post_path %>
