--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,15 @@
 <h1>Write a New Post!</h1>
 
+
+
 <%= form_for @post, url: user_posts_path do |f| %>
 
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
+  </p>
+  <p>
+    <%= "#{@post.byline}".upcase %>
   </p>
   <p>
     <%= f.label :body %><br>
