--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,10 @@
   <h2><%= "#{@post.title}" %></h2>
 </div>
 
+<div class="post-byline">
+  <p><%= "#{@post.byline}".upcase %></p>
+</div>
+
 <div class="post-body">
   <%= "#{@post.body}" %>
 </div>
@@ -15,3 +19,5 @@
 <%= link_to "edit", edit_user_post_path %>
 
 <%= link_to "new post", new_user_post_path %>
+
+<%= link_to "home", '/' %>
