--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TravelBloggerApp</title>
+  <title>Travel Blogger</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -15,6 +15,8 @@
     <%= link_to "Log In", '/login' %> | <%= link_to "Sign Up", new_user_path %>
   <% end %>
 </div>
+
+<h1>Travel Blogger</h1>
 
 <%= yield %>
 
