--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,14 +10,16 @@
   <%= "#{@post.body}" %>
 </div>
 
-<h3>Comments (<%= @post.comments.size %>)</h3>
-<%= render partial: 'comments/form' %>
-<%= render partial: 'posts/comment', collection: @post.comments %>
-
 <%= link_to "delete", user_post_path, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
 
 <%= link_to "edit", edit_user_post_path %>
 
 <%= link_to "new post", new_user_post_path %>
 
+<%= link_to "all users", "/users" %>
+
 <%= link_to "home", '/' %>
+
+<h3>Comments (<%= @post.comments.size %>)</h3>
+<%= render partial: 'comments/form' %>
+<%= render partial: 'posts/comment', collection: @post.comments %>
