--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,14 +1,21 @@
 <h1>Edit Post "<%= "#{@post.title}" %>"</h1>
 
-<%= form_for @post, url: {action: "edit"}, html: {method: "patch"} do |f| %>
+<%= form_for @post, url: {action: "edit"}, html: {method: "patch"}, html: {multipart: true} do |f| %>
 
 <p>
   <%= f.label :title %><br>
   <%= f.text_field :title %>
 </p>
 <p>
+  <%= "#{@post.byline}".upcase %>
+</p>
+<p>
   <%= f.label :body %><br>
   <%= f.text_area :body %><br>
+</p>
+<p>
+  <%= f.label :image, "Attach an Image" %><br>
+  <%= f.file_field :image %>
 </p>
 <p>
   <%= f.submit "Save" %>
