--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,6 @@
 <h1>Write a New Post!</h1>
 
-
-
-<%= form_for @post, url: user_posts_path do |f| %>
+<%= form_for @post, url: user_posts_path, html: {multipart: true} do |f| %>
 
   <p>
     <%= f.label :title %><br>
@@ -14,6 +12,13 @@
   <p>
     <%= f.label :body %><br>
     <%= f.text_area :body %><br>
+  </p>
+  <p>
+    <% if @post.image.exists? %>
+      <%= image_tag @post.image.url(:medium) %><br>
+    <% end %>
+    <%= f.label :image, "Attach an Image" %><br>
+    <%= f.file_field :image %>
   </p>
   <p>
     <%= f.submit "Save" %>
