--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, url: "/users" do |f| %>
+<%= form_for @user, url: "/users", html: {multipart: true} do |f| %>
   <p>
     <%= f.label :username %><br>
     <%= f.text_field :username %>
@@ -18,6 +18,13 @@
   <p>
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
+  </p>
+  <p>
+    <% if @user.image.exists? %>
+      <%= image_tag @user.image.url(:medium) %><br>
+    <% end %>
+    <%= f.label :image, "Attach an Image" %><br>
+    <%= f.file_field :image %>
   </p>
   <%= f.submit "Sign Up" %>
 <% end %>
