--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,7 +4,7 @@
 
 
     <p>
-      <%= f.label :content, "@#{@comment.author}" %><br>
+      <%= f.label :content, current_user ? ("@#{current_user.username}:") : "Guest:" %><br>
       <%= f.text_area :content %>
     </p>
     <p>
