--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -14,6 +14,10 @@
   <%= f.text_area :body %><br>
 </p>
 <p>
+  <%= f.label :city_list %><br>
+  <%= f.text_field :city_list %>
+</p>
+<p>
   <%= f.label :image, "Attach an Image" %><br>
   <%= f.file_field :image %>
 </p>
