--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,7 @@
 <p>"Welcome to Travel Blogger!"</p>
+
+<h2>Cities</h2>
+
+<% @cities.each do |city| %>
+  <%= link_to city.name, "/cities/#{city.id}" %>
+<% end %>
