--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,17 @@
-<h2><%= "#{@user.byline_name}"'\'s Profile' %></h2>
+<h2 class="profile-header"><%= "#{@user.byline_name}"'\'s Profile' %></h2>
 
-<h3><%= "@#{@user.username}" %></h3>
+<h3 class="profile-header"><%= "@#{@user.username}" %></h3>
 
 
 <%= image_tag @user.image.url(:medium) %><br>
 
 
 
-<p><strong>Bio:</strong><%= "#{@user.bio}" %></p>
+<p class="profile-header"><span id="user-bio-title">Bio:</span><%= "#{@user.bio}" %></p>
 
 
-<h3><%= "#{@user.byline_name}"'\'s Posts' %></h3>
-<ul>
+<h3 id="post-list-header"><%= "#{@user.byline_name}"'\'s Posts' %></h3>
+<ul id="user-links">
     <% @user.posts.each do |post| %>
       <li>
         <%= link_to "#{post.title}", "/users/#{@user.id}/posts/#{post.id}" %>
@@ -19,6 +19,8 @@
     <% end %>
 </ul>
 
-<%= link_to "Home", "/" %>
+<div class="nav-bar">
+  <%= link_to "Home", "/" %>
 
-<%= link_to "All Users", "/users" %>
+  <%= link_to "All Users", "/users" %>
+</div>
