--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,13 @@
-<h3>Post a Comment</h3>
+<h3 id="post-comment-header">Post a Comment</h3>
 
-  <%= form_for [ @user, @city, @post, @comment ], html: {method: "post"} do |f| %>
+  <%= form_for [ @user, @post, @comment ], html: {method: "post" }, html: { multipart: true } do |f| %>
 
-
-    <p>
+  <%#= image_tag (current_user) ? (current_user.image.url(:thumb)): @comment.image.url %>
+  <%# if @user.image.exists? %>
+    <%## end %>
+  <%#= f.label :image, "Attach an Image" %><br>
+  <%#= f.file_field :image %>
+    <p class="comment-author">
       <%= f.label :content, current_user ? ("@#{current_user.username}:") : "Guest:" %><br>
       <%= f.text_area :content %>
     </p>
