--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,33 +1,37 @@
-<div class="post-title">
+<div id="post-title">
   <h2><%= "#{@post.title}" %></h2>
 </div>
-<p>
+<p id="cities-listing">
   Cities:
   <% @post.cities.each do |city| %>
-    <%= link_to city.name, city_path(city) %>
+    <%= link_to city.name.capitalize, city_path(city) %>
   <% end %>
 </p>
-<div class="post-byline">
+<div id="post-byline">
   <p><%= link_to "#{@post.byline}".upcase, user_path(@user) %></p>
 </div>
 <% if @post.image.exists? %>
   <%= image_tag @post.image.url(:medium) %><br>
 <% end %>
 
-<div class="post-body">
+<div id="post-body">
   <%= "#{@post.body}" %>
 </div>
 
-<%= link_to "delete", user_post_path, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
+<div class="nav-bar">
+  <%= link_to "delete", user_post_path, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
 
-<%= link_to "edit", edit_user_post_path %>
+  <%= link_to "edit", edit_user_post_path %>
 
-<%= link_to "new post", new_user_post_path %>
+  <%= link_to "new post", new_user_post_path %>
 
-<%= link_to "all users", "/users" %>
+  <%= link_to "all users", "/users" %>
 
-<%= link_to "home", '/' %>
+  <%= link_to "home", '/' %>
+</div>
 
-<h3>Comments (<%= @post.comments.size %>)</h3>
-<%= render partial: 'comments/form' %>
-<%= render partial: 'posts/comment', collection: @post.comments %>
+<div id="comments">
+  <h3 id="comments-header">Comments (<%= @post.comments.size %>)</h3>
+  <%= render partial: 'comments/form' %>
+  <%= render partial: 'posts/comment', collection: @post.comments %>
+</div>
