--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,15 +16,29 @@
 
 /*Site-wide*/
 body {
-
+  width: 1300px;
+  margin: 0 auto;
+  float: none;
+  position: absolute
 }
+
+/*#page-wrap {
+  width: 800px;
+  margin: 0 auto;
+}*/
 
 #session-info {
   font-family: 'PT Sans', sans-serif;
+  float: right;
 }
 
 #site-title {
   font-family: 'Patua One', cursive;
+  text-align: center;
+  margin: 0 auto;
+  display: block;
+  width: 50%;
+  margin-top: 30px;
 }
 
 ul {
@@ -44,7 +58,51 @@ ul {
   font-family: 'Montserrat', sans-serif;
 }
 
+#featured {
+  text-align: center;
+  width: 60%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 80px;
+}
+
+#sidebar {
+  float: right;
+  margin-top: -150px;
+}
+
 /*user page*/
+#user-details {
+  text-align: center;
+  width: 50%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 80px;
+}
+
+#user-info {
+  float: right;
+  text-align: left;
+  margin-left: -500px;
+  padding: -100px;
+}
+
+#user-posts {
+  text-align: center;
+  width: 50%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 300px;
+}
+
+#user-image {
+  float:left;
+  /*position: relative;*/
+  margin-right: 0;
+  padding: 0;
+  margin-left: 150px;
+}
+
 .profile-header {
   font-family: 'Montserrat', sans-serif;
 }
@@ -71,7 +129,15 @@ ul {
 }
 
 /* Post view */
-#post-title {
+#entire-post {
+  text-align: center;
+  width: 70%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 80px;
+}
+
+.post-title {
   font-family: 'Bitter', serif;
 }
 
@@ -88,11 +154,17 @@ ul {
 
 #post-body {
   font-family: 'Merriweather', serif;
+  text-align: left
+}
+
+#edit-bar {
+  font-family: 'PT Sans', sans-serif;
 }
 
 #comments-header {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
+  margin-top: 100px
 }
 
 /* Comments form */
@@ -112,13 +184,51 @@ ul {
   font-size: 12px
 }
 
+#comment-author-label{
+  margin-top: -20px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+}
+
 .comment-author {
   font-family: 'Raleway', sans-serif;
   font-size: 14px;
   font-weight: 700;
 }
 
+/*Post edit page, new page, log in form*/
+.form-labels {
+  font-family: 'PT Sans', sans-serif;
+}
+
+.form {
+  text-align: center;
+  width: 70%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 80px;
+}
+
 /* Log In Page*/
 #login-labels {
   font-family: 'PT Sans', sans-serif;
+}
+
+/*City Page*/
+#city-page {
+  text-align: center;
+  width: 70%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 80px;
+}
+
+/*new user */
+#signup-form {
+  text-align: center;
+  width: 70%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 80px;
 }
