--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,12 +1,11 @@
-<h2 id="city-header">Posts about <%= "#{@city.name}".capitalize %></h2>
 
-<ul id="city-post-list">
-  <% @city.posts.each do |post| %>
-    <li><%= link_to post.title, "/users/#{post.user_id}/posts/#{post.id}" %></li>
-  <% end %>
-</ul>
+<div id="city-page">
+  <h2 id="city-header">Posts about <%= "#{@city.name}".capitalize %></h2>
 
-<div class="nav-bar">
+  <ul id="city-post-list">
+    <% @city.posts.each do |post| %>
+      <li><%= link_to post.title, "/users/#{post.user_id}/posts/#{post.id}" %></li>
+    <% end %>
+  </ul>
 
-  <%= link_to "home", '/' %>
 </div>
