--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -7,7 +7,7 @@
     <%## end %>
   <%#= f.label :image, "Attach an Image" %><br>
   <%#= f.file_field :image %>
-    <p class="comment-author">
+    <p id="comment-author-label">
       <%= f.label :content, current_user ? ("@#{current_user.username}:") : "Guest:" %><br>
       <%= f.text_area :content %>
     </p>
