--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,24 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <!-- <div id="page-wrap"> -->
+  <div class="nav-bar">
 
-<div id="session-info">
-  <% if current_user %>
-    hello <%= current_user.username %> | <%= link_to "Log Out", '/logout' %>
-  <% else %>
-    <%= link_to "Log In", '/login' %> | <%= link_to "Sign Up", new_user_path %>
-  <% end %>
-</div>
+    <%= link_to "home", '/' %>
+  </div>
 
-<h1 id="site-title">Travel Blogger</h1>
+    <div id="session-info">
+      <% if current_user %>
+        hello <%= current_user.username %> | <%= link_to "Log Out", '/logout' %>
+      <% else %>
+        <%= link_to "Log In", '/login' %> | <%= link_to "Sign Up", new_user_path %>
+      <% end %>
+    </div>
 
-<%= yield %>
+    <h1 id="site-title">Travel Blogger</h1>
 
+    <%= yield %>
+
+  <!-- </div> -->
 </body>
 </html>
