--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,28 +1,32 @@
-<h1>Edit Post "<%= "#{@post.title}" %>"</h1>
+<div class="form">
+  <h1 class="post-title">Edit Post "<%= "#{@post.title}" %>"</h1>
 
-<%= form_for @post, url: {action: "edit"}, html: {method: "patch"}, html: {multipart: true} do |f| %>
+  <div class="form-labels">
+    <%= form_for @post, url: {action: "edit"}, html: {method: "patch"}, html: {multipart: true} do |f| %>
 
-<p>
-  <%= f.label :title %><br>
-  <%= f.text_field :title %>
-</p>
-<p>
-  <%= "#{@post.byline}".upcase %>
-</p>
-<p>
-  <%= f.label :body %><br>
-  <%= f.text_area :body %><br>
-</p>
-<p>
-  <%= f.label :city_list %><br>
-  <%= f.text_field :city_list %>
-</p>
-<p>
-  <%= f.label :image, "Attach an Image" %><br>
-  <%= f.file_field :image %>
-</p>
-<p>
-  <%= f.submit "Save" %>
-</p>
+    <p>
+      <%= f.label :title %><br>
+      <%= f.text_field :title %>
+    </p>
+    <p>
+      <%= "by #{@post.byline}".upcase %>
+    </p>
+    <p>
+      <%= f.label :body %><br>
+      <%= f.text_area :body %><br>
+    </p>
+    <p>
+      <%= f.label :city_list %><br>
+      <%= f.text_field :city_list %>
+    </p>
+    <p>
+      <%= f.label :image, "Attach an Image" %><br>
+      <%= f.file_field :image %>
+    </p>
+    <p>
+      <%= f.submit "Save" %>
+    </p>
 
-<% end %>
+    <% end %>
+  </div>
+</div>
