--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,31 +1,34 @@
-<h1>Write a New Post!</h1>
+<div class="form">
+  <h1 class="post-title">Write a New Post!</h1>
+  <div class="form-labels">
+    <%= form_for @post, url: user_posts_path, html: {multipart: true} do |f| %>
 
-<%= form_for @post, url: user_posts_path, html: {multipart: true} do |f| %>
+      <p>
+        <%= f.label :title %><br>
+        <%= f.text_field :title %>
+      </p>
+      <p>
+        <%= "#{@post.byline}".upcase %>
+      </p>
+      <p>
+        <%= f.label :body %><br>
+        <%= f.text_area :body %><br>
+      </p>
+      <p>
+        <%= f.label :city_list %><br>
+        <%= f.text_field :city_list %>
+      </p>
+      <p>
+        <% if @post.image.exists? %>
+          <%= image_tag @post.image.url(:medium) %><br>
+        <% end %>
+        <%= f.label :image, "Attach an Image" %><br>
+        <%= f.file_field :image %>
+      </p>
+      <p>
+        <%= f.submit "Save" %>
+      </p>
 
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= "#{@post.byline}".upcase %>
-  </p>
-  <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %><br>
-  </p>
-  <p>
-    <%= f.label :city_list %><br>
-    <%= f.text_field :city_list %>
-  </p>
-  <p>
-    <% if @post.image.exists? %>
-      <%= image_tag @post.image.url(:medium) %><br>
     <% end %>
-    <%= f.label :image, "Attach an Image" %><br>
-    <%= f.file_field :image %>
-  </p>
-  <p>
-    <%= f.submit "Save" %>
-  </p>
-
-<% end %>
+  </div>
+</div>
