--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,37 +1,37 @@
-<div id="post-title">
-  <h2><%= "#{@post.title}" %></h2>
-</div>
-<p id="cities-listing">
-  Cities:
-  <% @post.cities.each do |city| %>
-    <%= link_to city.name.capitalize, city_path(city) %>
+
+
+<div id="entire-post">
+  <div  class="post-title">
+    <h2><%= "#{@post.title}" %></h2>
+  </div>
+  <p id="cities-listing">
+    Cities:
+    <% @post.cities.each do |city| %>
+      <%= link_to city.name.capitalize, city_path(city) %>
+    <% end %>
+  </p>
+  <div id="post-byline">
+    <p><%= link_to "#{@post.byline}".upcase, user_path(@user) %></p>
+  </div>
+  <% if @post.image.exists? %>
+    <%= image_tag @post.image.url(:medium) %><br>
   <% end %>
-</p>
-<div id="post-byline">
-  <p><%= link_to "#{@post.byline}".upcase, user_path(@user) %></p>
-</div>
-<% if @post.image.exists? %>
-  <%= image_tag @post.image.url(:medium) %><br>
-<% end %>
 
-<div id="post-body">
-  <%= "#{@post.body}" %>
-</div>
+  <div id="post-body">
+    <%= "#{@post.body}" %>
+  </div>
 
-<div class="nav-bar">
-  <%= link_to "delete", user_post_path, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
+  <div id="edit-bar">
+    <%= link_to "delete", user_post_path, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %> |
 
-  <%= link_to "edit", edit_user_post_path %>
+    <%= link_to "edit", edit_user_post_path %> |
 
-  <%= link_to "new post", new_user_post_path %>
+    <%= link_to "new post", new_user_post_path %>
+  </div>
 
-  <%= link_to "all users", "/users" %>
-
-  <%= link_to "home", '/' %>
-</div>
-
-<div id="comments">
-  <h3 id="comments-header">Comments (<%= @post.comments.size %>)</h3>
-  <%= render partial: 'comments/form' %>
-  <%= render partial: 'posts/comment', collection: @post.comments %>
+  <div id="comments">
+    <h3 id="comments-header">Comments (<%= @post.comments.size %>)</h3>
+    <%= render partial: 'comments/form' %>
+    <%= render partial: 'posts/comment', collection: @post.comments %>
+  </div>
 </div>
