--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,32 @@
-<%= form_for @user, url: "/users", html: {multipart: true} do |f| %>
-  <p>
-    <%= f.label :username %><br>
-    <%= f.text_field :username %>
-  </p>
-  <p>
-    <%= f.label :byline_name %><br>
-    <%= f.text_field :byline_name %>
-  </p>
-  <p>
-    <%= f.label :bio %>
-    <%= f.text_field :bio %>
-  </p>
-  <p>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </p>
-  <p>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </p>
-  <p>
-    <% if @user.image.exists? %>
-      <%= image_tag @user.image.url(:medium) %><br>
-    <% end %>
-    <%= f.label :image, "Attach an Image" %><br>
-    <%= f.file_field :image %>
-  </p>
-  <%= f.submit "Sign Up" %>
-<% end %>
+<div id="signup-form">
+  <%= form_for @user, url: "/users", html: {multipart: true} do |f| %>
+    <p>
+      <%= f.label :username %><br>
+      <%= f.text_field :username %>
+    </p>
+    <p>
+      <%= f.label :byline_name %><br>
+      <%= f.text_field :byline_name %>
+    </p>
+    <p>
+      <%= f.label :bio %>
+      <%= f.text_field :bio %>
+    </p>
+    <p>
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+    </p>
+    <p>
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation %>
+    </p>
+    <p>
+      <% if @user.image.exists? %>
+        <%= image_tag @user.image.url(:medium) %><br>
+      <% end %>
+      <%= f.label :image, "Attach an Image" %><br>
+      <%= f.file_field :image %>
+    </p>
+    <%= f.submit "Sign Up" %>
+  <% end %>
+</div>
