--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,15 +3,16 @@
 <div id="featured">
   <h2 class="homepage-header">Featured Stories</h2>
   <div id="feature-1">
-    <img src= "/assets/amsterdam_trekearth.jpeg" width="300" height="200">
+    <%= image_tag "amsterdam_trekearth.jpeg", size: "300x200" %>
+    <!-- <img src= "/assets/amsterdam_trekearth.jpeg" width="300" height="200"> -->
     <%= link_to "Amsterdam Post", "/users/" %>
   </div>
   <div id="feature-2">
-    <img src="/assets/berlin_carpeberlin.jpg" width="300" height="200">
+    <%= image_tag "berlin_carpeberlin.jpg", size: "300x200" %>
       <%= link_to "Berlin Post", "/users/" %>
   </div>
   <div id="feature-3">
-    <img src="/assets/paris_odyseeyonline.jpeg" width="300" height="200">
+    <%= image_tag "paris_odyseeyonline.jpeg", size: "300x200" %>
       <%= link_to "Paris Post", "/users/" %>
   </div>
 
