changed jpeg to jpg

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 <div id="featured">
   <h2 class="homepage-header">Featured Stories</h2>
   <div id="feature-1">
-    <%= image_tag "amsterdam_trekearth.jpeg", size: "300x200" %>
+    <%= image_tag "amsterdam_trekearth.jpg", size: "300x200" %>
     <!-- <img src= "/assets/amsterdam_trekearth.jpeg" width="300" height="200"> -->
     <%= link_to "Amsterdam Post", "/users/" %>
   </div>
@@ -12,7 +12,7 @@
       <%= link_to "Berlin Post", "/users/" %>
   </div>
   <div id="feature-3">
-    <%= image_tag "paris_odyseeyonline.jpeg", size: "300x200" %>
+    <%= image_tag "paris_odyseeyonline.jpg", size: "300x200" %>
       <%= link_to "Paris Post", "/users/" %>
   </div>
 
