new seed file, index links working

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,15 +5,15 @@
   <div id="feature-1">
     <%= image_tag "amsterdam_trekearth.jpg", size: "300x200" %>
     <!-- <img src= "/assets/amsterdam_trekearth.jpeg" width="300" height="200"> -->
-    <%= link_to "Amsterdam Post", "/users/" %>
+    <%= link_to "Biking Amsterdam", "/users/2/posts/8" %>
   </div>
   <div id="feature-2">
     <%= image_tag "berlin_carpeberlin.jpg", size: "300x200" %>
-      <%= link_to "Berlin Post", "/users/" %>
+      <%= link_to "Berlin Graffiti Tour", "/users/2/posts/6" %>
   </div>
   <div id="feature-3">
     <%= image_tag "paris_odyseeyonline.jpg", size: "300x200" %>
-      <%= link_to "Paris Post", "/users/" %>
+      <%= link_to "Following in Elain Dundy's Footsteps", "/users/1/posts/3" %>
   </div>
 
 <div id="destinations">
@@ -22,13 +22,13 @@
       <h3>Paris</h3>
       <ul>
         <li>
-          <%= link_to "Paris Post", "/users/" %>
+          <%= link_to "Following in Elain Dundy's Footsteps", "/users/1/posts/3" %>
         </li>
         <li>
-          <%= link_to "Paris Post 2", "/users" %>
+          <%= link_to "Midnight in Paris", "/users/1/posts/1" %>
         </li>
         <li>
-          <%= link_to "Paris Post 3", "/users" %>
+          <%= link_to "Surrealist Paris", "/users/1/posts/2" %>
         </li>
       </ul>
     </div>
@@ -36,26 +36,26 @@
       <h3>Berlin</h3>
       <ul>
         <li>
-          <%= link_to "Berlin Post", "/users/" %>
+          <%= link_to "Berlin Graffiti Tour", "/users/2/posts/6" %>
         </li>
         <li>
-          <%= link_to "Berlin Post 2", "/users" %>
+          <%= link_to "Berlin Stree Style", "/users/2/posts/5"  %>
         </li>
         <li>
-          <%= link_to "Berlin Post 3", "/users" %>
+          <%= link_to "Contemporary Art Spots", "/users/2/posts/7" %>
       </ul>
     </div>
     <div id="third-city">
       <h3>Amsterdam</h3>
       <ul>
         <li>
-          <%= link_to "Amsterdam Post", "/users/" %>
+          <%= link_to "Biking Amsterdam", "/users/2/posts/8" %>
         </li>
         <li>
-          <%= link_to "Amsterdam Post 2", "/users" %>
+          <%= link_to "Anne Frank House Trip", "/users/2/posts/10" %>
         </li>
         <li>
-          <%= link_to "Amsterdam Post 3", "/users" %>
+          <%= link_to "Visiting the Van Gogh Museum", "/users/2/posts/9" %>
       </ul>
     </div>
  </div>
