fixed typos on homepage

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div id="feature-3">
     <%= image_tag "paris_odyseeyonline.jpg", size: "300x200" %>
-      <%= link_to "Following in Elain Dundy's Footsteps", "/users/1/posts/3" %>
+      <%= link_to "Following in Elaine Dundy's Footsteps", "/users/1/posts/3" %>
   </div>
 
 <div id="destinations">
@@ -22,7 +22,7 @@
       <h3>Paris</h3>
       <ul>
         <li>
-          <%= link_to "Following in Elain Dundy's Footsteps", "/users/1/posts/3" %>
+          <%= link_to "Following in Elaine Dundy's Footsteps", "/users/1/posts/3" %>
         </li>
         <li>
           <%= link_to "Midnight in Paris", "/users/1/posts/1" %>
@@ -39,7 +39,7 @@
           <%= link_to "Berlin Graffiti Tour", "/users/2/posts/6" %>
         </li>
         <li>
-          <%= link_to "Berlin Stree Style", "/users/2/posts/5"  %>
+          <%= link_to "Berlin Street Style", "/users/2/posts/5"  %>
         </li>
         <li>
           <%= link_to "Contemporary Art Spots", "/users/2/posts/7" %>
